--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 greenlet==3.2.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.8
 httptools==0.6.4
@@ -23,10 +24,11 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.16
+packaging==25.0
 passlib==1.7.4
 psycopg==3.2.6
 psycopg-binary==3.2.6
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.3
@@ -52,5 +54,6 @@ typing_extensions==4.13.2
 tzdata==2025.2
 ujson==5.10.0
 uvicorn==0.34.0
+uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
